# krisi

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  all_types.py  api.html  contribute.html  docs_environment.yml  environment.yml  genindex.html  get_started.html  index.html  installation.html  mkdocs.yaml  objects.inv  openai.py  openai2.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml  usage.html
.github/workflows/: black.yml  ci-cd.yml  docs.yaml  flake.yml  isort.yml  sphinx.yml  test.yml  tests.yaml
_autosummary/: krisi.evaluate.assertions.html  krisi.evaluate.compare.html  krisi.evaluate.eval.html  krisi.evaluate.html  krisi.evaluate.metric.html  krisi.evaluate.scorecard.html  krisi.evaluate.type.html  krisi.evaluate.utils.html  krisi.html  krisi.report.html  krisi.report.interactive.html  krisi.report.pdf.html  krisi.report.report.html  krisi.report.static.html  krisi.report.type.html
_sources/: get_started.rst.txt  index.rst.txt  installation.rst.txt
_sources/_autosummary/: krisi.evaluate.assertions.rst.txt  krisi.evaluate.compare.rst.txt  krisi.evaluate.eval.rst.txt  krisi.evaluate.metric.rst.txt  krisi.evaluate.rst.txt  krisi.evaluate.scorecard.rst.txt  krisi.evaluate.type.rst.txt  krisi.evaluate.utils.rst.txt  krisi.report.pdf.rst.txt  krisi.report.report.rst.txt  krisi.report.rst.txt  krisi.report.type.rst.txt  krisi.rst.txt
_sources/source/_templates/: custom-module-template.rst.txt
api/: index.html
api/dataset/: index.html
api/evaluate/: index.html
api/scorecard/: index.html
concepts/scorecard/: index.html
dev_utils/: generate_from_examples.py
docs/: api.md  conf.py  contribute.md  get_started.md  index.md  index.rst  requirements.txt
docs/api/: dataset.md  evaluate.md  index.md  library.md  metric.md  scorecard.md
docs/examples/: a_full_rundown_notebook.ipynb  a_start_report_console.py  analyse_rolling_corr.py  basic_pdf_report.py  basic_report_rolling.py  basic_rolling.py  basic_saving.py  basic_scorecard.py  evaluate_classification.py  evaluate_classification_multilabel.py  evaluate_classification_with_probabilities.py  evaluate_compare_classification.py  evaluate_compare_regression.py  evaluate_default_metric_selection.py  evaluate_probabilities.py  evaluate_probabilities_binary.py  evaluate_regression.py  evaluate_rolling.py  minimal_html_report.py  printing_methods.py  report_direct.py  report_direct_one_subplot.py  report_direct_save.py  report_interactive.py  report_pdf.py  scorecard_extended.py  scorecard_printing_methods.py  scorecard_saving.py  scorecard_to_series.py  training_arima_report.py  utils.py
docs/source/: api.rst  conf.py  index.rst
docs/source/_autosummary/: krisi.evaluate.rst  krisi.report.interactive.rst  krisi.report.rst  krisi.report.static.rst  krisi.report.type.rst
docs/walkthroughs/: a_full_rundown_notebook.ipynb  a_full_rundown_notebook.md  walkthrough.md
eda/: analysis.py  modeling.py  utils.py
evaluation/: evaluate.py
examples/: a_full_rundown_notebook.ipynb  basic_df.py  basic_loading.py  basic_pdf_report.py  basic_report_rolling.py  basic_scorecard.py  compare_classification.py  compare_regression.py  default_metric_selection.py  extended_scorecard.py  loading_generating_report.py  minimal_classification.py  minimal_html_report.py  minimal_pdf_report.py  minimal_regression.py  printing_methods.py  training_arima_report.py
product/license/: index.html
product/roadmap/: index.html
reporting/: static.py  types.py
search/: search_index.json
source/_templates/: custom-class-template.html  custom-module-template.html
src/evaluate/: evaluate.py  predict.py  scorecard.py
src/examples/: basic_report.py  extended_scorecard.py
src/explore/: pipeline.py
src/krisi/: __init__.py
src/krisi/analyse/: __init__.py  analysis.py  correlations.py  pipeline.py  utils.py
src/krisi/evaluate/: __init__.py  assertions.py  benchmark.py  compare.py  dataset.py  eval.py  evaluate.py  group.py  metric.py  score.py  scorecard.py  type.py  utils.py
src/krisi/evaluate/library_/: benchmarking_models.py  default_metrics_classification.py  default_metrics_regression.py  metric_wrappers.py  registry.py
src/krisi/examples/: basic_compare.py  basic_html_report.py  basic_loading.py  basic_pdf_report.py  basic_report.py  basic_report_rolling.py  basic_saving.py  basic_scorecard.py  compare_classification.py  compare_regression.py  extended_scorecard.py  loading_generating_report.py  minimal.py  minimal_classification.py  minimal_html_report.py  minimal_pdf_report.py  minimal_regression.py  minimal_report.py  pdf_report.py  saving.py
src/krisi/explore/: analysis.py  modeling.py  pipeline.py
src/krisi/report/: __init__.py  console.py  graph.py  interactive.py  pdf.py  report.py  static.py  template.html  type.py  types_.py  vizualise.py
src/krisi/utils/: __init__.py  console_plot.py  data.py  environment.py  io.py  iterable_helpers.py  modeling_types.py  models.py  printing.py  runner.py  state.py
src/krisi/utils/devutils/: data.py  environment_checks.py  timing.py  type.py
src/krisi/vizualise/: interactive.py  report.py
src/report/: interactive.py  report.py  static.py
tests/: sample_predictions_binary.csv  sample_y_classification.csv  sample_y_ds.csv  test_benchmarking.py  test_evaluate.py  test_examples.py  test_imbalanced.py  test_report.py  test_scorecard.py
tests/unit/: test_evaluate.py  test_group.py  test_infer.py  test_metric.py  test_probabilities.py  test_saving.py  test_scorecard_getters.py  test_scorecard_union.py  test_utils.py
tests/util/: generate_from_examples.py
walkthroughs/: a_full_rundown_notebook.ipynb
walkthroughs/a_full_rundown_notebook/: index.html
