[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krisi"
version = "0.0.1"
authors = [
  { name="Mark Szulyovszky", email="mark.szulyovszky@gmail.com" },
  { name="Daniel Szemerey", email="daniel@szemerey.eu" },
]
description = "Testing, Reporting and EDA framework for Time Series Analysis"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

dependencies = [
  # Base libraries
  "pytest",
  "numpy ==1.22.4",
  "numba ==0.53.1",
  "pandas",

  #Plotting libraries
  "matplotlib",
  "rich",
  "tqdm",
  "plotext",
  "plotly",

  #TS and Modeling libraries
  "statsmodels ==0.12.1",
  "sktime",
  "scikit-learn"
  
  # -- Dev Dependencies --
  # "pyright",
  # "black",
  # "ipython",
  # "notebook",
  # "ipykernel",
  # "pydeps",
  # "pytest",
  # "isort"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
"Homepage" = "https://github.com/dream-faster/krisi"
"Bug Tracker" = "https://github.com/dream-faster/krisi/issues"